std_out/main/managerial_layer-1332.err
Traceback (most recent call last):
  File "main.py", line 2, in <module>
    from network_analysis import *
  File "/cluster/raid/home/michael.tsesmelis/SideProject/network_analysis.py", line 48
    deltas_em.append(delta_em)
    ^
SyntaxError: invalid syntax
